Upgrade review output to professional report format with IDs, file:line, recommendations, and addressed items
Agent-Logs-Url: https://github.com/mohsenzamni/MRReviewer/sessions/df76b567-a048-40d2-8c93-576816e04d41

Co-authored-by: mohsenzamni <40610601+mohsenzamni@users.noreply.github.com>